--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -1,10 +1,14 @@
 //color
 $black: #1B1A1D;
 $bodily: #CCAB7C;
+$grey: #49484A;
 
 //font
 $fantasy: 'fantasy';
-$regular: 400;
+$impact: "Impact, fantasy";
+$mono: 'Andale Mono';
+$monospace: 'DejaVu Sans Mono, monospace';
+$regular: 500;
 $normal: 700;
 $bold: 900;
 
