--- a/src/scss/components/_constructor.scss
+++ b/src/scss/components/_constructor.scss
@@ -1,60 +1,94 @@
+@import "../config/mixins.scss";
+@import "../config/variables.scss";
+
 .constructor {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: $black;
+
+  &__container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    flex-direction: column;
+    width: 70%;
+    box-shadow: 0 0 16px rgb(0, 0, 0 / 100%);
+    border-radius: 25px;
 
-    &__container {
-        &__name {
-            
-        }
-
-        &__upload-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            width: 200px;
-            height: 200px;
-            outline: 2px dashed #5d5d5d;
-            outline-offset: -12px;
-            background-color: #e0f2f7;
-            font-family: 'Segoe UI';
-            color: #1f3c44;
-        }
-       
-        &__upload-image {
-            width: 40%;
-            margin-bottom: 20px;
-            user-select: none;
-        }
-
-        &__upload-container label {
-            font-weight: bold;
-        }
-       
-        &__upload-container label:hover {
-            cursor: pointer;
-            text-decoration: underline;
-        }
-
-        &__upload-container div {
-            position: relative;
-            z-index: 10;
-        }
-       
-        &__upload-container input[type=file] {
-            width: 0.1px;
-            height: 0.1px;
-            opacity: 0;
-            position: absolute;
-            z-index: -10;
-        }
-
-        &__upload-container input[type=file]:focus + label {
-            outline: -webkit-focus-ring-color auto 5px;
-        }
+    &__title {
+      @include titleCard;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+      margin: 0;
+      border-radius: 15px 15px 0 0;
+      background-color: $grey;
+      font-size: xx-large;
+      color: $bodily;
     }
+
+    &__name {
+      margin: 1rem;
+    }
+
+    &__short-description {
+      margin: 1rem;
+    }
+
+    &__add-ingredients {
+      margin: 1rem;
+    }
+
+    &__description {
+      margin: 1rem;
+    }
+
+    &__upload-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 200px;
+      height: 200px;
+      outline: 2px dashed #5d5d5d;
+      outline-offset: -12px;
+      font-family: "Segoe UI";
+    }
+
+    &__upload-image {
+      width: 40%;
+      margin-bottom: 20px;
+      user-select: none;
+    }
+
+    &__upload-container label {
+      font-weight: bold;
+    }
+
+    &__upload-container label:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+
+    &__upload-container div {
+      position: relative;
+      z-index: 10;
+    }
+
+    &__upload-container input[type="file"] {
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      position: absolute;
+      z-index: -10;
+    }
+
+    &__upload-container input[type="file"]:focus + label {
+      outline: -webkit-focus-ring-color auto 5px;
+    }
+  }
 }
