--- a/src/scss/components/_constructor.scss
+++ b/src/scss/components/_constructor.scss
@@ -55,19 +55,19 @@
             @include field;
           }
       
-          &__short-description {
-            width: 80%;
-            margin: 1rem;
+          &__short-description {   
             @include field;
             @include description;
+            width: 80%;
+            margin: 1rem;
           }
       
-          &__add-ingredients {
-            width: 80%;
-            margin-top: 1rem;
-            padding: 0.5em 0;
+          &__add-ingredients { 
             @include button;
             @include label;
+            width: 80%;
+            margin: 1rem 0 2rem 0;
+            padding: 0.5em 0;
           }
       
           &__steps-card {
