--- a/src/scss/components/_constructor.scss
+++ b/src/scss/components/_constructor.scss
@@ -15,7 +15,6 @@
 
   &__card {
     width: 70%;
-    height: 37rem;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -179,12 +178,12 @@
         }
     }
     &__button {
-      position: absolute;
-      bottom: 0;
-      padding: 0.5rem 1.8rem;
-  
       @include button;
       @include label;
+
+      position: absolute;
+      bottom: -1.5rem;
+      padding: 0.5rem 1.8rem;
     }
     
   }
