--- a/src/scss/components/_editDish.scss
+++ b/src/scss/components/_editDish.scss
@@ -13,7 +13,6 @@
 
   &__container {
     width: 70%;
-    height: 37rem;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -43,99 +42,103 @@
       align-items: start;
       justify-content: start;
       width: 100%;
-    }
 
-    &__card {
-      display: flex;
-      flex-direction: column;
-      width: 60%;
-      margin: 0 2rem;
-
-      &__name {
-        width: 80%;
-        @include name;
-        @include field;
-      }
-
-      &__short-description {   
-        @include field;
-        @include description;
-        width: 80%;
-      }
-
-      &__add-ingredients { 
-        @include button;
-        @include label;
-        width: 80%;
-        margin: 1rem 0 2rem 0;
-        padding: 0.5em 0;
-      }
-
-      &__field-ingredient {
-        @include field;
-        @include ingredient;
-        height: 2rem;
-        display: flex;
-        margin: 0;
-        width: 80%;
-      }
-
-      &__list-ingredients {
-        height: 11rem;
-        overflow: auto;
-        &__suggestion-ingredient {
-          list-style-type: none;
-          &__button {
-            @include button;
-            padding: 0.5rem 1rem;
-            margin-bottom: 0.7rem;
-          }
-        }
-      }
-
-      &__add {
-        @include button;
-        padding: 0.5rem 1rem;
-        background-color: $bodily;
-        color: $black;
-      }
-
-      &__steps-card {
+      &__card {
         display: flex;
         flex-direction: column;
-
-        &__field {
-          width: 80%;
+        width: 60%;
+        margin: 0 2rem;
   
-          @include field;
-          @include step;
-        }
-
-        &__button {
-          padding: 0.5em 0;
+        &__name {
           width: 80%;
+          @include name;
+          @include field;
+        }
+  
+        &__short-description {   
+          @include field;
+          @include description;
+          width: 80%;
+        }
+  
+        &__add-ingredients { 
           @include button;
           @include label;
+          width: 80%;
+          margin: 1rem 0 2rem 0;
+          padding: 0.5em 0;
         }
-      }
-
-      &__description {
-        width: 80%;
-        margin: 1rem;
   
-        @include field;
-        @include description;
-      }
+        &__field-ingredient {
+          @include field;
+          @include ingredient;
+          height: 2rem;
+          display: flex;
+          margin: 0;
+          width: 80%;
+        }
+  
+        &__list-ingredients {
+          height: 11rem;
+          overflow: auto;
+          &__suggestion-ingredient {
+            list-style-type: none;
+            &__button {
+              @include button;
+              padding: 0.5rem 1rem;
+              margin-bottom: 0.7rem;
+            }
+          }
+        }
+  
+        &__add {
+          @include button;
+          padding: 0.5rem 1rem;
+          background-color: $bodily;
+          color: $black;
+        }
+  
+        &__steps-card {
+          display: flex;
+          flex-direction: column;
+  
+          &__field {
+            @include field;
+            @include step;
 
+            width: 80%;
+          }
+  
+          &__add-steps {
+            @include button;
+            @include label;
+
+            padding: 0.5em 0;
+            width: 80%;
+          }
+        }
+  
+        &__description {
+          width: 80%;
+          margin: 1rem;
+    
+          @include field;
+          @include description;
+        }
+  
+      }
     }
+
+   
 
     &__button {
-      position: absolute;
-      bottom: 0;
-      padding: 0.5rem 1.8rem;
-  
       @include button;
       @include label;
+
+      position: absolute;
+      bottom: -1rem;
+      padding: 0.5rem 1.8rem;
     }
+
   }
 }
